# build-challenge

./: .gitignore  README.md  pyproject.toml  pytest.ini
scripts/: run_producer_consumer.sh  run_sales_analysis.sh
src/: __init__.py
src/producer_consumer/: __init__.py  buffer.py  consumer.py  producer.py  runner.py
src/sales_analysis/: __init__.py  analytics.py  models.py  reader.py  runner.py
tests/: __init__.py  test_producer_consumer.py  test_sales_analysis.py
